# backend

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: CI.yml
apps/api_docs/: apps.py  urls.py  views.py
apps/api_docs/templates/api_docs/: index.html
apps/auth/: urls.py
leet_chat_backend/: asgi.py  settings.py  urls.py  wsgi.py
