[tool.poetry]
name = "leet_chat_backend"
version = "0.1.0"
description = ""
authors = ["dhvcc <1337kwiz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.3"
django-rest-framework = "^0.1.0"
psycopg2-binary = "^2.8.6"
PyYAML = "^5.3.1"
uritemplate = "^3.0.1"
coreapi = "^2.3.3"
django-baton = "^1.12.1"
django-storages = "^1.10.1"
boto3 = "^1.16.16"
drf-spectacular = "^0.11.0"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.2"
Werkzeug = "0.16.1"
django-extensions = "^3.0.9"
pre-commit = "^2.8.2"
isort = "^5.6.4"
flake8 = "^3.8.4"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37', 'py38']
exclude = '''
(
    \.eggs
  | \.git
  | build
  | dist
  | venv
  | migrations
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
